tests/parsing/smtlib/poly/errors/177_par_open.psmt2
(set-logic ALL)
(assert (par _
